--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
         # Update Image tag in our Kubernetes Deployment Manifest        
         - echo "Update Image tag in kube-manifest..."
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' kube-manifests/01-DEVOPS-Nginx-Deployment.yml
+        - echo '=======s@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@'  
         # Verify AWS CLI Version        
         - echo "Verify AWS CLI Version..."
         - aws --version
