--- a/kube-manifests/01-DEVOPS-Nginx-Deployment.yml
+++ b/kube-manifests/01-DEVOPS-Nginx-Deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: ken42-aws-devops
-          image: CONTAINER_IMAGE
+          image: 268117265615.dkr.ecr.ap-south-1.amazonaws.com/ken42-aws-devops:2023-04-27.06.00.33.68735052
           ports:
             - containerPort: 80
