added NAMESPACE env Variable

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
         - TAG="$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
         # Update Image tag in our Kubernetes Deployment Manifest        
         - echo "Update Image tag in kube-manifest..."
+        - sed -i 's@K8S_NAMESPACE@'"$NAMESPACE"'@' kube-manifests/01-DEVOPS-Nginx-Deployment.yml
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' kube-manifests/01-DEVOPS-Nginx-Deployment.yml
         - echo '=======s@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@'  
         # Verify AWS CLI Version        
