--- a/kube-manifests/01-DEVOPS-Nginx-Deployment.yml
+++ b/kube-manifests/01-DEVOPS-Nginx-Deployment.yml
@@ -4,6 +4,7 @@ metadata:
   name: ken42-aws-devops-deployment
   labels:
     app: ken42-aws-devops
+  namespace: K8S_NAMESPACE
 spec:
   replicas: 1
   selector:
@@ -16,6 +17,6 @@ spec:
     spec:
       containers:
         - name: ken42-aws-devops
-          image: 268117265615.dkr.ecr.ap-south-1.amazonaws.com/ken42-aws-devops:2023-04-27.06.00.33.68735052
+          image: CONTAINER_IMAGE
           ports:
             - containerPort: 80
