ingress file updated

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,8 @@ phases:
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' kube-manifests/01-DEVOPS-Nginx-Deployment.yml
         - echo "Update namespace in NodePortService.yml file"
         - sed -i 's@K8S_NAMESPACE@'"$NAMESPACE"'@' kube-manifests/02-DEVOPS-Nginx-NodePortService.yml
+        - echo "Update namespace in ALB-IngressService.yml file"
+        - sed -i 's@K8S_NAMESPACE@'"$NAMESPACE"'@' kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml
         - echo '=======s@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@'  
         # Verify AWS CLI Version        
         - echo "Verify AWS CLI Version..."
