nginx class added

--- a/kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml
+++ b/kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml
@@ -9,6 +9,7 @@ metadata:
   name: eks-devops-ingress-service
   namespace: K8S_NAMESPACE
 spec:
+  ingressClassName: nginx
   rules:
   - host: nasscom-sample.ken42.com
     http:
