--- a/kube-manifests/01-DEVOPS-Nginx-Deployment.yml
+++ b/kube-manifests/01-DEVOPS-Nginx-Deployment.yml
@@ -20,3 +20,8 @@ spec:
           image: CONTAINER_IMAGE
           ports:
             - containerPort: 80
+      tolerations:
+        - key: "agentpool"
+          operator: "Equal"
+          value: "application"
+          effect: "NoSchedule"      
