--- a/kube-manifests/02-DEVOPS-Nginx-NodePortService.yml
+++ b/kube-manifests/02-DEVOPS-Nginx-NodePortService.yml
@@ -5,13 +5,14 @@ metadata:
   labels:
     app: ken42-aws-devops
   namespace: K8S_NAMESPACE  
-  annotations:    
+  #annotations:    
 #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
-    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html    
+    #alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html    
 spec:
   type: NodePort
   selector:
     app: ken42-aws-devops
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 80
