--- a/kube-manifests/01-DEVOPS-Nginx-Deployment.yml
+++ b/kube-manifests/01-DEVOPS-Nginx-Deployment.yml
@@ -1,27 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: admission-portal
+  name: eks-devops-deployment
   namespace: K8S_NAMESPACE  
   labels:
-    app: admission-portal
+    app: eks-devops
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: admission-portal
+      app: eks-devops
   template:
     metadata:
       labels:
-        app: admission-portal
+        app: eks-devops
     spec:
       containers:
-        - name: admission-portal
+        - name: eks-devops
           image: CONTAINER_IMAGE
           ports:
             - containerPort: 80
-      tolerations:
-        - key: "agentpool"
-          operator: "Equal"
-          value: "application"
-          effect: "NoSchedule"
