--- a/kube-manifests/02-DEVOPS-Nginx-NodePortService.yml
+++ b/kube-manifests/02-DEVOPS-Nginx-NodePortService.yml
@@ -1,12 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: admission-portal
-  namespace: K8S_NAMESPACE  
+  name: eks-devops-nodeport-service
+  namespace: K8S_NAMESPACE
+  labels:
+    app: eks-devops
+  annotations:    
+#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
+    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html    
 spec:
+  type: NodePort
   selector:
-    app: admission-portal
+    app: eks-devops
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 80
