--- a/kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml
+++ b/kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml
@@ -39,9 +39,11 @@ spec:
           - path: /*
             pathType: Prefix
             backend:
-              serviceName: eks-devops-nodeport-service
-              port:
-                name: http
+              service:
+                 name: eks-devops-nodeport-service
+                 port:
+                   name: http
+
                                
 # Important Note-1: In path based routing order is very important, if we are going to use  "/*", try to use it at the end of all rules.         
 
