--- a/buildspec.yml
+++ b/buildspec.yml
@@ -52,7 +52,7 @@ phases:
       - echo "Apply changes to kube manifests"            
       - kubectl apply -f kube-manifests/01-DEVOPS-Nginx-Deployment.yml
       - kubectl apply -f kube-manifests/02-DEVOPS-Nginx-NodePortService.yml
-      - kubectl apply -f kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml --validate=false
+      #- kubectl apply -f kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml --validate=false
       - echo "Completed applying changes to Kubernetes Objects"           
       # Create Artifacts which we can use if we want to continue our pipeline for other stages
       - printf '[{"name":"01-DEVOPS-Nginx-Deployment.yml","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
