--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,14 @@ server {
         gzip_types      text/plain text/css application/json application/x-javascript application/javascript text/xml application/xml application/rss+xml text/javascript image/svg+xml application/vnd.ms-fontobject application/x-font-ttf font/opentype;
         gzip_vary on;
 
+        location /api/ {
+           proxy_set_header Host $host;
+           proxy_pass http://admission-integration;
+        }
+
+
         location / {
-        root /var/www/html/app1;
+        root /var/www/html/build;
         autoindex on;
         index index.html;
         try_files $uri $uri/ /index.html?q=$uri&$args;
