Updated buildspec.yml with config

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -52,6 +52,8 @@ phases:
       - echo "Apply changes to kube manifests"            
       - kubectl apply -f kube-manifests/01-DEVOPS-Nginx-Deployment.yml
       - kubectl apply -f kube-manifests/02-DEVOPS-Nginx-NodePortService.yml
+      - kubectl apply -f kube-manifests/02-config-ingress.yaml
+      - kubectl apply -f kube-manifests/02-configuration-mc.yaml
       #- kubectl apply -f kube-manifests/03-DEVOPS-Nginx-ALB-IngressService.yml --validate=false
       - echo "Completed applying changes to Kubernetes Objects"           
       # Create Artifacts which we can use if we want to continue our pipeline for other stages
