--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,7 +31,7 @@ phases:
       # Build Docker Image
       - echo "Build started on `date`"
       - echo "Building the Docker image..."
-      - docker build --tag 268117265615.dkr.ecr.ap-south-1.amazonaws.com/ken42-aws-devops:latest .
+      - docker build --tag 268117265615.dkr.ecr.ap-south-1.amazonaws.com/ken42-aws-devops:2023-04-29.13.19.50.31bcccce .
   post_build:
     commands:
       # Push Docker Image to ECR Repository
